Fix horizontal spacing of favicons and hash icons

--- a/assets/static/common.css
+++ b/assets/static/common.css
@@ -128,18 +128,21 @@ input[type="submit"] {
     cursor: pointer;
 }
 
+.favicon-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 8px;
+}
+
 .favicon {
     width: 16px;
     height: 16px;
-    vertical-align: sub;
-}
-
-.favicon + .favicon {
-    margin-inline-start: 8px;
 }
 
 .button .favicon {
     margin-inline-end: 8px;
+    vertical-align: sub;
 }
 
 article,
@@ -219,6 +222,10 @@ table td {
 
 .hash {
     direction: ltr;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 5px;
 }
 
 .hash-icon {
@@ -226,10 +233,6 @@ table td {
     height: 25px;
     vertical-align: sub;
     filter: drop-shadow(1px 1px 0 black);
-}
-
-.hash-icon + .hash-icon {
-    margin-left: 5px;
 }
 
 fieldset {
@@ -315,13 +318,13 @@ footer,
         font-size: 128px;
     }
 
+    .hash {
+        gap: 10px;
+    }
+
     .hash-icon {
         width: 50px;
         height: 50px;
-    }
-
-    .hash-icon + .hash-icon {
-        margin-left: 10px;
     }
 }
 
